--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -14,6 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tv_userHeader"
         android:text="Hello guest"
         android:layout_below="@id/image_header"
         android:layout_centerInParent="true"
