--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -5,21 +5,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <TextView
-            android:id="@+id/fragment_loggedin_loggedInUser"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textAlignment="center"
-            android:gravity="center_horizontal"
-            android:text="ASDSDASDASDASDASDASD"/>
-
-        <Button
-            android:id="@+id/fragment_loggedin_logOut"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Log Out"
-            android:layout_below="@id/fragment_loggedin_loggedInUser"/>
+            android:layout_height="match_parent"
+            tools:context=".view.LoggedInFragment" />
 
 </RelativeLayout>
 
