--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,5 +37,12 @@
     <fragment
         android:id="@+id/routesListFragment"
         android:name="com.motoroutes.view.RoutesListFragment"
-        android:label="RoutesListFragment" />
+        android:label="RoutesListFragment" >
+        <action
+            android:id="@+id/action_routesListFragment_to_loggedInFragmemt"
+            app:destination="@id/loggedInFragmemt" />
+        <action
+            android:id="@+id/action_routesListFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
