--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -39,7 +39,8 @@
                             android:layout_marginTop="20dp"
                             android:paddingVertical="5dp"
                             android:paddingHorizontal="10dp"
-                            android:layout_margin="20dp"
+                            android:layout_marginBottom="20dp"
+                            android:layout_marginHorizontal="20dp"
                             android:ems="10"
                             android:hint="@string/hint_add_route_name"
                             android:imeOptions="actionNext"
