--- a/app/src/main/res/layout/route_cell.xml
+++ b/app/src/main/res/layout/route_cell.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     tools:ignore="MissingConstraints"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="15dp">
     <RelativeLayout android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:background="@color/Light_Gray">
+            android:layout_width="match_parent">
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/routes_list_cell_image"
                 android:layout_width="100dp"
