--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,7 +84,7 @@
         <item name="android:paddingLeft">10dp</item>
     </style>
 
-    <style name="Widget.App.Button.IconOnly" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="Widget.App.Button.IconOnly" parent="Widget.MaterialComponents.Button">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
@@ -92,6 +92,8 @@
         <item name="android:paddingRight">12dp</item>
         <item name="android:minWidth">48dp</item>
         <item name="android:minHeight">48dp</item>
+        <item name="backgroundTint">@color/Light_Green_50</item>
+        <item name="iconTint">@color/cardview_dark_background</item>
     </style>
 
     <style name="circleImageView" parent="">
